@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - `PartialOrd`/`Ord` impls for `v4::DhcpOption`/`v6::DhcpOption`/`v4::OptionCode`/`v6::OptionCode`
 - `v6::DhcpOptions` methods `*_all`
 - `v6::Duid` & methods
+- `v6::Message` `Display` impl
 
 ### Changed
 
